--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edu Story AI - Eğitici Hikayeler</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-
+<link rel="shortcut icon" href="images/favicon.png" type="images/png">
 <body class="min-h-screen">
     <!-- Header/Navbar -->
     <header class="gradient-bg text-white shadow-md">
