--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="AI ile otomatik eğitici hikayeler oluşturun">
+    <meta name="keywords" content="edtech, hikaye, AI, eğitim">
     <title>Edu Story AI - Eğitici Hikayeler</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <link rel="shortcut icon" href="images/favicon.png" type="images/png">
 <body class="min-h-screen">
