--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button class="p-2 rounded-full hover:bg-white/10 transition">
                     <i class="fas fa-search"></i>
                 </button>
-                <button class="p-2 rounded-full hover:bg-white/10 transition">
+                <button id="userBtn" class="p-2 rounded-full hover:bg-white/10 transition">
                     <i class="fas fa-user"></i>
                 </button>
             </div>
@@ -291,7 +291,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-6 text-center text-gray-400 text-sm">
-                &copy; 2023 Edu Story AI. <span data-tr="rights">Tüm hakları saklıdır.</span>
+                &copy; 2025 Edu Story AI. <span data-tr="rights">Tüm hakları saklıdır.</span>
             </div>
         </div>
     </footer>
@@ -513,5 +513,6 @@
         // Initialize with Turkish translations
         applyTranslations('tr');
     </script>
+
 </body>
 </html>
