--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                     <div class="p-4">
-                        <h4 class="font-bold text-lg mb-2 text-gray-800" data-tr="quantum_adventure">Kuantum Macerası</h4>
+                        <h4 class="font-bold text-lg mb-2 text-gray-800" data-tr="quantum_adventure">Kuantum Macerası <img src="images/quantum.png" alt="quantum_adventure"></h4> 
                         <p class="text-gray-600 text-sm mb-3" data-tr="quantum_desc">Kuantum fiziğinin büyüleyici dünyasını etkileyici bir hikayeyle keşfedin.</p>
                         <div class="flex justify-between items-center">
                             <div class="flex items-center text-yellow-400">
