--- a/index.html
+++ b/index.html
@@ -86,27 +86,32 @@
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- Story Card 1 -->
-                <div class="story-card bg-white rounded-xl overflow-hidden">
-                    <div class="h-40 bg-blue-500 relative">
-                        <div class="absolute top-3 left-3 bg-white/90 text-blue-800 px-2 py-1 rounded text-xs font-medium">
-                            <span data-tr="science">Bilim</span>
-                        </div>
-                    </div>
-                    <div class="p-4">
-                        <h4 class="font-bold text-lg mb-2 text-gray-800" data-tr="quantum_adventure">Kuantum Macerası <img src="images/quantum.png" alt="Kuantum macerası simgesi"></h4> 
-                        <p class="text-gray-600 text-sm mb-3" data-tr="quantum_desc">Kuantum fiziğinin büyüleyici dünyasını etkileyici bir hikayeyle keşfedin.</p>
-                        <div class="flex justify-between items-center">
-                            <div class="flex items-center text-yellow-400">
-                                <i class="fas fa-star"></i>
-                                <span class="text-gray-700 ml-1 text-sm">4.8</span>
-                            </div>
-                            <button class="text-purple-600 hover:text-purple-800 text-sm font-medium">
-                                <span data-tr="read_now">Şimdi Oku</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
+<div class="story-card bg-white rounded-xl overflow-hidden">
+    <div class="h-40 bg-blue-500 relative">
+      <div class="absolute top-3 left-3 bg-white/90 text-blue-800 px-2 py-1 rounded text-xs font-medium">
+        <span data-tr="science">Bilim</span>
+      </div>
+    </div>
+    <div class="p-4">
+      <div class="flex items-center justify-between mb-2">
+        <h4 class="font-bold text-lg text-gray-800" data-tr="quantum_adventure">Kuantum Macerası</h4>
+        <img src="images/quantum.png" alt="Kuantum macerası simgesi" class="w-6 h-6">
+      </div>
+      <p class="text-gray-600 text-sm mb-3" data-tr="quantum_desc">
+        Kuantum fiziğinin büyüleyici dünyasını etkileyici bir hikayeyle keşfedin.
+      </p>
+      <div class="flex justify-between items-center">
+        <div class="flex items-center text-yellow-400">
+          <i class="fas fa-star"></i>
+          <span class="text-gray-700 ml-1 text-sm">4.8</span>
+        </div>
+        <button class="text-purple-600 hover:text-purple-800 text-sm font-medium">
+          <span data-tr="read_now">Şimdi Oku</span>
+        </button>
+      </div>
+    </div>
+  </div>
+  
                 <!-- Story Card 2 -->
                 <div class="story-card bg-white rounded-xl overflow-hidden">
                     <div class="h-40 bg-green-500 relative">
