--- a/index.html
+++ b/index.html
@@ -94,10 +94,8 @@
     </div>
     <div class="p-4">
       <div class="flex items-center justify-between mb-2">
-        <h4 class="font-bold text-lg text-gray-800" data-tr="quantum_adventure">Kuantum Macerası</h4>
-        <img src="images/quantum.png" alt="Kuantum görseli"
-     class="absolute inset-0 m-auto w-16 h-16">
-
+        <h4 class="font-bold text-lg text-gray-800" data-tr="quantum_adventure">Kuantum Macerası <img src="images/quantum.png" alt="Kuantum macerası simgesi" class="w-6 h-6"></h4>
+        
       </div>
       <p class="text-gray-600 text-sm mb-3" data-tr="quantum_desc">
         Kuantum fiziğinin büyüleyici dünyasını etkileyici bir hikayeyle keşfedin.
