--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
                 </button>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <!-- Story Card 1 -->
+
+<!-- Story Card 1 -->
 <div class="story-card bg-white rounded-xl overflow-hidden">
-    <div class="h-40 bg-blue-500 relative">
+    <div class="h-40 bg-blue-500 relative"> 
       <div class="absolute top-3 left-3 bg-white/90 text-blue-800 px-2 py-1 rounded text-xs font-medium">
         <span data-tr="science">Bilim</span>
       </div>
     </div>
     <div class="p-4">
       <div class="flex items-center justify-between mb-2">
-        <h4 class="font-bold text-lg text-gray-800" data-tr="quantum_adventure">Kuantum Macerası <img src="images/quantum.png" alt="Kuantum macerası simgesi" class="w-6 h-6"></h4>
-        
+        <h4 class="font-bold text-lg text-gray-800" data-tr="quantum_adventure">Kuantum Macerası</h4>
       </div>
       <p class="text-gray-600 text-sm mb-3" data-tr="quantum_desc">
         Kuantum fiziğinin büyüleyici dünyasını etkileyici bir hikayeyle keşfedin.
@@ -258,6 +258,9 @@
                     <option value="literature" data-tr="literature">Edebiyat</option>
                     <option value="math" data-tr="math">Matematik</option>
                     <option value="technology" data-tr="technology">Teknoloji</option>
+                    <option value="music" data-tr="technology">Müzik</option>
+                    <option value="art" data-tr="art">Sanat</option>
+                    <option value="foreign languages" data-tr="foreign languages">Yabancı Diller</option>
                 </select>
             </div>
             
