--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
                     <option value="literature" data-tr="literature">Edebiyat</option>
                     <option value="math" data-tr="math">Matematik</option>
                     <option value="technology" data-tr="technology">Teknoloji</option>
-                    <option value="music" data-tr="technology">Müzik</option>
+                    <option value="music" data-tr="music">Müzik</option>
                     <option value="art" data-tr="art">Sanat</option>
-                    <option value="foreign languages" data-tr="foreign languages">Yabancı Diller</option>
+                    <option value="foreign_languages" data-tr="foreign languages">Yabancı Diller</option>                    
                 </select>
             </div>
             
