--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-medium mb-2" for="storyCategory" data-tr="category">Kategori</label>
-                <select id="storyCategory" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-purple-500">
+                <select id="storyCategory" size="8" class="w-full h-40 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-purple-500">
                     <option value="" data-tr="select_category">Bir kategori seçin</option>
                     <option value="science" data-tr="science">Bilim</option>
                     <option value="history" data-tr="history">Tarih</option>
