--- a/index.html
+++ b/index.html
@@ -87,29 +87,39 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
 
 <!-- Story Card 1 -->
-<div class="story-card bg-white rounded-xl overflow-hidden">
-    <div class="h-40 bg-blue-500 relative"> 
-      <div class="absolute top-3 left-3 bg-white/90 text-blue-800 px-2 py-1 rounded text-xs font-medium">
-        <span data-tr="science">Bilim</span>
-      </div>
-    </div>
-    <div class="p-4">
-      <div class="flex items-center justify-between mb-2">
-        <h4 class="font-bold text-lg text-gray-800" data-tr="quantum_adventure">Kuantum Macerası</h4>
-      </div>
-      <p class="text-gray-600 text-sm mb-3" data-tr="quantum_desc">
-        Kuantum fiziğinin büyüleyici dünyasını etkileyici bir hikayeyle keşfedin.
-      </p>
-      <div class="flex justify-between items-center">
-        <div class="flex items-center text-yellow-400">
-          <i class="fas fa-star"></i>
-          <span class="text-gray-700 ml-1 text-sm">4.8</span>
+<!-- Kuantum Maceraları Kartı -->
+<div class="feature-card bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transform transition-all hover:scale-105">
+    <a href="science.html" class="block">
+      <div class="relative">
+        <!-- Kart Görseli -->
+        <div class="h-48 bg-gradient-to-r from-indigo-500 to-purple-600 overflow-hidden">
+          <div class="flex items-center justify-center h-full">
+            <div class="text-white text-6xl">
+              <i class="fas fa-atom fa-spin"></i>
+            </div>
+          </div>
         </div>
-        <button class="text-purple-600 hover:text-purple-800 text-sm font-medium">
-          <span data-tr="read_now">Şimdi Oku</span>
-        </button>
+        <!-- İki Dilde Başlık Bandı -->
+        <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-r from-indigo-800/80 to-purple-800/80 text-white p-2 flex justify-between">
+          <span class="font-bold tr-lang">Kuantum Maceraları</span>
+          <span class="font-bold en-lang hidden">Quantum Adventures</span>
+        </div>
       </div>
-    </div>
+      <div class="p-4">
+        <p class="text-gray-600 mb-2 tr-lang">Meraklı bir çocuğun kuantum dünyasına yolculuğunu keşfedin!</p>
+        <p class="text-gray-600 mb-2 en-lang hidden">Discover a curious child's journey into the quantum world!</p>
+        <div class="flex justify-between items-center">
+          <div class="flex space-x-2">
+            <span class="inline-block px-2 py-1 text-xs bg-indigo-100 text-indigo-800 rounded-full">Bilim</span>
+            <span class="inline-block px-2 py-1 text-xs bg-purple-100 text-purple-800 rounded-full">Hikaye</span>
+          </div>
+          <button class="text-indigo-600 hover:text-indigo-800 font-semibold">
+            <span class="tr-lang">Oku <i class="fas fa-arrow-right ml-1"></i></span>
+            <span class="en-lang hidden">Read <i class="fas fa-arrow-right ml-1"></i></span>
+          </button>
+        </div>
+      </div>
+    </a>
   </div>
   
                 <!-- Story Card 2 -->
