--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <!-- Kart Görseli -->
         <div class="h-48 bg-gradient-to-r from-indigo-500 to-purple-600 overflow-hidden">
           <div class="flex items-center justify-center h-full">
-            <div class="text-white text-6xl">
-              <i class="fas fa-atom fa-spin"></i>
+            <div class="h-48 bg-gradient-to-r from-indigo-500 to-purple-600 overflow-hidden flex items-center justify-center">
+                <div class="w-24 h-24 bg-contain bg-center bg-no-repeat" style="background-image: url('images/quantum.png')"></div>
             </div>
           </div>
         </div>
@@ -123,26 +123,40 @@
   </div>
   
                 <!-- Story Card 2 -->
-                <div class="story-card bg-white rounded-xl overflow-hidden">
-                    <div class="h-40 bg-green-500 relative">
-                        <div class="absolute top-3 left-3 bg-white/90 text-green-800 px-2 py-1 rounded text-xs font-medium">
-                            <span data-tr="history">Tarih</span>
-                        </div>
-                    </div>
-                    <div class="p-4">
-                        <h4 class="font-bold text-lg mb-2 text-gray-800" data-tr="ancient_civs">Antik Uygarlıklar</h4>
-                        <p class="text-gray-600 text-sm mb-3" data-tr="ancient_desc">Antik uygarlıkların harikalarını keşfetmek için zamanda yolculuk yapın.</p>
-                        <div class="flex justify-between items-center">
-                            <div class="flex items-center text-yellow-400">
-                                <i class="fas fa-star"></i>
-                                <span class="text-gray-700 ml-1 text-sm">4.5</span>
-                            </div>
-                            <button class="text-purple-600 hover:text-purple-800 text-sm font-medium">
-                                <span data-tr="read_now">Şimdi Oku</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
+               <!-- Zamanda Yolculuk Kartı -->
+<div class="feature-card bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transform transition-all hover:scale-105">
+    <a href="antics.html" class="block">
+      <div class="relative">
+        <!-- Kart Görseli -->
+        <div class="h-48 bg-gradient-to-r from-amber-500 to-amber-700 overflow-hidden">
+          <div class="flex items-center justify-center h-full">
+            <div class="h-48 bg-gradient-to-r from-indigo-500 to-purple-600 overflow-hidden flex items-center justify-center">
+                <div class="w-24 h-24 bg-contain bg-center bg-no-repeat" style="background-image: url('images/antik.png')"></div>
+            </div>
+          </div>
+        </div>
+        <!-- İki Dilde Başlık Bandı -->
+        <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-r from-amber-800/80 to-amber-600/80 text-white p-2 flex justify-between">
+          <span class="font-bold tr-lang">Zamanda Yolculuk</span>
+          <span class="font-bold en-lang hidden">Time Travel Adventures</span>
+        </div>
+      </div>
+      <div class="p-4">
+        <p class="text-gray-600 mb-2 tr-lang">Arkeolog Dr. Elif'in antik dünyalara olan büyüleyici seyahatine katılın!</p>
+        <p class="text-gray-600 mb-2 en-lang hidden">Join archaeologist Dr. Elif on her fascinating journey to ancient worlds!</p>
+        <div class="flex justify-between items-center">
+          <div class="flex space-x-2">
+            <span class="inline-block px-2 py-1 text-xs bg-amber-100 text-amber-800 rounded-full">Tarih</span>
+            <span class="inline-block px-2 py-1 text-xs bg-orange-100 text-orange-800 rounded-full">Macera</span>
+          </div>
+          <button class="text-amber-600 hover:text-amber-800 font-semibold">
+            <span class="tr-lang">Oku <i class="fas fa-arrow-right ml-1"></i></span>
+            <span class="en-lang hidden">Read <i class="fas fa-arrow-right ml-1"></i></span>
+          </button>
+        </div>
+      </div>
+    </a>
+  </div>
 
                 <!-- Story Card 3 -->
                 <div class="story-card bg-white rounded-xl overflow-hidden">
