--- a/index.html
+++ b/index.html
@@ -92,13 +92,9 @@
     <a href="science.html" class="block">
       <div class="relative">
         <!-- Kart Görseli -->
-        <div class="h-48 bg-gradient-to-r from-indigo-500 to-purple-600 overflow-hidden">
-          <div class="flex items-center justify-center h-full">
-            <div class="h-48 bg-gradient-to-r from-indigo-500 to-purple-600 overflow-hidden flex items-center justify-center">
-                <div class="w-24 h-24 bg-contain bg-center bg-no-repeat" style="background-image: url('images/quantum.png')"></div>
-            </div>
-          </div>
-        </div>
+        <div class="h-48 overflow-hidden bg-cover bg-center bg-no-repeat" 
+     style="background-image: url('images/quantum.png')">
+  </div>
         <!-- İki Dilde Başlık Bandı -->
         <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-r from-indigo-800/80 to-purple-800/80 text-white p-2 flex justify-between">
           <span class="font-bold tr-lang">Kuantum Maceraları</span>
@@ -128,13 +124,9 @@
     <a href="antics.html" class="block">
       <div class="relative">
         <!-- Kart Görseli -->
-        <div class="h-48 bg-gradient-to-r from-amber-500 to-amber-700 overflow-hidden">
-          <div class="flex items-center justify-center h-full">
-            <div class="h-48 bg-gradient-to-r from-indigo-500 to-purple-600 overflow-hidden flex items-center justify-center">
-                <div class="w-24 h-24 bg-contain bg-center bg-no-repeat" style="background-image: url('images/antik.png')"></div>
-            </div>
-          </div>
-        </div>
+        <div class="h-48 overflow-hidden bg-cover bg-center bg-no-repeat" 
+     style="background-image: url('images/antik.png')">
+  </div>
         <!-- İki Dilde Başlık Bandı -->
         <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-r from-amber-800/80 to-amber-600/80 text-white p-2 flex justify-between">
           <span class="font-bold tr-lang">Zamanda Yolculuk</span>
