--- a/index.html
+++ b/index.html
@@ -151,28 +151,37 @@
   </div>
 
                 <!-- Story Card 3 -->
-                <div class="story-card bg-white rounded-xl overflow-hidden">
-                    <div class="h-40 bg-purple-500 relative">
-                        <div class="absolute top-3 left-3 bg-white/90 text-purple-800 px-2 py-1 rounded text-xs font-medium">
-                            <span data-tr="literature">Edebiyat</span>
-                        </div>
-                    </div>
-                    <div class="p-4">
-                        <h4 class="font-bold text-lg mb-2 text-gray-800" data-tr="shakespeare">Shakespeare'in Sırları</h4>
-                        <p class="text-gray-600 text-sm mb-3" data-tr="shakespeare_desc">Shakespeare'in en ünlü eserlerinin arkasındaki gizli anlamları keşfedin.</p>
-                        <div class="flex justify-between items-center">
-                            <div class="flex items-center text-yellow-400">
-                                <i class="fas fa-star"></i>
-                                <span class="text-gray-700 ml-1 text-sm">4.7</span>
-                            </div>
-                            <button class="text-purple-600 hover:text-purple-800 text-sm font-medium">
-                                <span data-tr="read_now">Şimdi Oku</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+               <!-- Shakespeare'in Gizli Anlamları Kartı -->
+<div class="feature-card bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transform transition-all hover:scale-105">
+    <a href="shakespeare.html" class="block">
+      <div class="relative">
+        <!-- Kart Görseli -->
+        <div class="h-48 overflow-hidden bg-cover bg-center bg-no-repeat" 
+        style="background-image: url('images/shakespeare.png')">
+     </div>
+        <!-- İki Dilde Başlık Bandı -->
+        <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-r from-amber-900/80 to-yellow-700/80 text-white p-2 flex justify-between">
+          <span class="font-bold tr-lang">Shakespeare'in Gizli Anlamları</span>
+          <span class="font-bold en-lang hidden">Shakespeare's Hidden Meanings</span>
+        </div>
+      </div>
+      <div class="p-4">
+        <p class="text-gray-600 mb-2 tr-lang">Efsanevi oyunlarda saklı mesajları keşfedin, Bard'ın perde arkasına göz atın!</p>
+        <p class="text-gray-600 mb-2 en-lang hidden">Discover the hidden messages in legendary plays—peek behind the Bard’s curtain!</p>
+        <div class="flex justify-between items-center">
+          <div class="flex space-x-2">
+            <span class="inline-block px-2 py-1 text-xs bg-amber-100 text-amber-800 rounded-full">Edebiyat</span>
+            <span class="inline-block px-2 py-1 text-xs bg-yellow-100 text-yellow-800 rounded-full">Analiz</span>
+          </div>
+          <button class="text-amber-700 hover:text-amber-900 font-semibold">
+            <span class="tr-lang">Oku <i class="fas fa-arrow-right ml-1"></i></span>
+            <span class="en-lang hidden">Read <i class="fas fa-arrow-right ml-1"></i></span>
+          </button>
+        </div>
+      </div>
+    </a>
+  </div>
+  
 
         <!-- Recent Stories -->
         <section>
@@ -184,27 +193,38 @@
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- Story Card 4 -->
-                <div class="story-card bg-white rounded-xl overflow-hidden">
-                    <div class="h-40 bg-yellow-500 relative">
-                        <div class="absolute top-3 left-3 bg-white/90 text-yellow-800 px-2 py-1 rounded text-xs font-medium">
-                            <span data-tr="math">Matematik</span>
-                        </div>
-                    </div>
-                    <div class="p-4">
-                        <h4 class="font-bold text-lg mb-2 text-gray-800" data-tr="number_mystery">Sayıların Gizemi</h4>
-                        <p class="text-gray-600 text-sm mb-3" data-tr="number_desc">Bulmacaları çözün ve sayılarda gizlenen sırları ortaya çıkarın.</p>
-                        <div class="flex justify-between items-center">
-                            <div class="flex items-center text-yellow-400">
-                                <i class="fas fa-star"></i>
-                                <span class="text-gray-700 ml-1 text-sm">4.3</span>
-                            </div>
-                            <button class="text-purple-600 hover:text-purple-800 text-sm font-medium">
-                                <span data-tr="read_now">Şimdi Oku</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
+               <!-- Sayıların Gizemi Kartı -->
+<div class="feature-card bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transform transition-all hover:scale-105">
+    <a href="numbers.html" class="block">
+      <div class="relative">
+        <!-- Kart Görseli -->
+       <!-- Kart Görseli -->
+       <div class="h-48 overflow-hidden bg-cover bg-center bg-no-repeat" 
+       style="background-image: url('images/numbers.png')">
+    </div>
+        <!-- İki Dilde Başlık Bandı -->
+        <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-r from-blue-900/80 to-indigo-600/80 text-white p-2 flex justify-between">
+          <span class="font-bold tr-lang">Sayıların Gizemi</span>
+          <span class="font-bold en-lang hidden">The Mystery of Numbers</span>
+        </div>
+      </div>
+      <div class="p-4">
+        <p class="text-gray-600 mb-2 tr-lang">Altın oranlardan Fibonacci'ye uzanan büyüleyici matematik yolculuğuna katıl!</p>
+        <p class="text-gray-600 mb-2 en-lang hidden">Join the fascinating math journey from golden ratios to Fibonacci secrets!</p>
+        <div class="flex justify-between items-center">
+          <div class="flex space-x-2">
+            <span class="inline-block px-2 py-1 text-xs bg-blue-100 text-blue-800 rounded-full">Matematik</span>
+            <span class="inline-block px-2 py-1 text-xs bg-indigo-100 text-indigo-800 rounded-full">Bilim</span>
+          </div>
+          <button class="text-blue-700 hover:text-blue-900 font-semibold">
+            <span class="tr-lang">Oku <i class="fas fa-arrow-right ml-1"></i></span>
+            <span class="en-lang hidden">Read <i class="fas fa-arrow-right ml-1"></i></span>
+          </button>
+        </div>
+      </div>
+    </a>
+  </div>
+  
                 <!-- Story Card 5 -->
                 <div class="story-card bg-white rounded-xl overflow-hidden">
                     <div class="h-40 bg-red-500 relative">
