--- a/index.html
+++ b/index.html
@@ -226,51 +226,37 @@
   </div>
   
                 <!-- Story Card 5 -->
-                <div class="story-card bg-white rounded-xl overflow-hidden">
-                    <div class="h-40 bg-red-500 relative">
-                        <div class="absolute top-3 left-3 bg-white/90 text-red-800 px-2 py-1 rounded text-xs font-medium">
-                            <span data-tr="technology">Teknoloji</span>
-                        </div>
-                    </div>
-                    <div class="p-4">
-                        <h4 class="font-bold text-lg mb-2 text-gray-800" data-tr="ai_revolution">AI Devrimi</h4>
-                        <p class="text-gray-600 text-sm mb-3" data-tr="ai_desc">Yapay zekanın dünyamızı nasıl değiştirdiğini öğrenin.</p>
-                        <div class="flex justify-between items-center">
-                            <div class="flex items-center text-yellow-400">
-                                <i class="fas fa-star"></i>
-                                <span class="text-gray-700 ml-1 text-sm">4.9</span>
-                            </div>
-                            <button class="text-purple-600 hover:text-purple-800 text-sm font-medium">
-                                <span data-tr="read_now">Şimdi Oku</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Story Card 6 -->
-                <div class="story-card bg-white rounded-xl overflow-hidden">
-                    <div class="h-40 bg-indigo-500 relative">
-                        <div class="absolute top-3 left-3 bg-white/90 text-indigo-800 px-2 py-1 rounded text-xs font-medium">
-                            <span data-tr="science">Bilim</span>
-                        </div>
-                    </div>
-                    <div class="p-4">
-                        <h4 class="font-bold text-lg mb-2 text-gray-800" data-tr="space_explorers">Uzay Kaşifleri</h4>
-                        <p class="text-gray-600 text-sm mb-3" data-tr="space_desc">Güneş sistemimizde yıldızlararası bir yolculuğa çıkın.</p>
-                        <div class="flex justify-between items-center">
-                            <div class="flex items-center text-yellow-400">
-                                <i class="fas fa-star"></i>
-                                <span class="text-gray-700 ml-1 text-sm">4.6</span>
-                            </div>
-                            <button class="text-purple-600 hover:text-purple-800 text-sm font-medium">
-                                <span data-tr="read_now">Şimdi Oku</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+                <!-- Yapay Zeka Devrimi Kartı -->
+<div class="feature-card bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transform transition-all hover:scale-105">
+    <a href="aı.html" class="block">
+      <div class="relative">
+        <!-- Kart Görseli -->
+        <div class="h-48 overflow-hidden bg-cover bg-center bg-no-repeat" 
+       style="background-image: url('images/aı.png')">
+    </div>
+        <!-- İki Dilde Başlık Bandı -->
+        <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-r from-purple-900/80 to-blue-800/80 text-white p-2 flex justify-between">
+          <span class="font-bold tr-lang">Yapay Zeka Devrimi</span>
+          <span class="font-bold en-lang hidden">The AI Revolution</span>
+        </div>
+      </div>
+      <div class="p-4">
+        <p class="text-gray-600 mb-2 tr-lang">Yapay zekanın dünyamızı nasıl dönüştürdüğünü keşfedin!</p>
+        <p class="text-gray-600 mb-2 en-lang hidden">Explore how artificial intelligence is reshaping our world!</p>
+        <div class="flex justify-between items-center">
+          <div class="flex space-x-2">
+            <span class="inline-block px-2 py-1 text-xs bg-purple-100 text-purple-800 rounded-full">Teknoloji</span>
+            <span class="inline-block px-2 py-1 text-xs bg-blue-100 text-blue-800 rounded-full">Gelecek</span>
+          </div>
+          <button class="text-purple-700 hover:text-purple-900 font-semibold">
+            <span class="tr-lang">Oku <i class="fas fa-arrow-right ml-1"></i></span>
+            <span class="en-lang hidden">Read <i class="fas fa-arrow-right ml-1"></i></span>
+          </button>
+        </div>
+      </div>
+    </a>
+  </div>
+  
 
     <!-- Create Story Modal -->
     <div id="createStoryModal" class="modal modal-closed fixed inset-0 bg-black/50 flex items-center justify-center p-4 z-50">
