--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <link rel="shortcut icon" href="images/favicon.png" type="images/png">
-<body class="min-h-screen flex flex-col"> 
+<body class="min-h-screen flex flex-col bg-gray-50"> 
     <!-- Header/Navbar -->
     <header class="gradient-bg text-white shadow-md">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
@@ -42,7 +42,7 @@
     </header>
 
     <!-- Main Content -->
-    <main class="flex-1 container mx-auto px-4 py-8">
+    <main class="flex-1 container mx-auto px-4 py-8"> 
         <!-- Hero Section -->
         <section class="mb-12 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-4 text-gray-800" data-tr="discover_stories">Eğitici Hikayeler Keşfedin</h2>
@@ -305,19 +305,29 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 w-full mt-auto">
         <div class="container mx-auto px-4">
-          <div class="flex flex-col md:flex-row justify-between items-center">
-            <div class="mb-4 md:mb-0">
-              <div class="flex items-center space-x-2">
+          <div class="flex flex-col md:flex-row justify-between items-start md:items-center">
+            <div class="mb-6 md:mb-0">
+              <div class="flex items-center space-x-2 mb-3">
                 <i class="fas fa-book-open text-2xl"></i>
                 <h2 class="text-xl font-bold">Edu Story AI</h2>
               </div>
-              <p class="text-gray-400 mt-2 text-sm">Herkes için AI destekli eğitici hikayeler.</p>
+              <p class="text-gray-400 text-sm max-w-md">Herkes için AI destekli eğitici hikayeler.</p>
             </div>
-            <div class="flex flex-wrap justify-center gap-x-6 gap-y-2">
-              <a href="#" class="hover:text-purple-300 transition">Hakkında</a>
-              <a href="#" class="hover:text-purple-300 transition">İletişim</a>
-              <a href="#" class="hover:text-purple-300 transition">Gizlilik</a>
-              <a href="#" class="hover:text-purple-300 transition">Koşullar</a>
+            <div class="grid grid-cols-2 gap-8">
+              <div>
+                <h3 class="text-lg font-semibold mb-3">Bağlantılar</h3>
+                <ul class="space-y-2">
+                  <li><a href="#" class="text-gray-400 hover:text-purple-300 transition">Hakkında</a></li>
+                  <li><a href="#" class="text-gray-400 hover:text-purple-300 transition">İletişim</a></li>
+                </ul>
+              </div>
+              <div>
+                <h3 class="text-lg font-semibold mb-3">Yasal</h3>
+                <ul class="space-y-2">
+                  <li><a href="#" class="text-gray-400 hover:text-purple-300 transition">Gizlilik</a></li>
+                  <li><a href="#" class="text-gray-400 hover:text-purple-300 transition">Koşullar</a></li>
+                </ul>
+              </div>
             </div>
           </div>
           <div class="border-t border-gray-700 mt-8 pt-6 text-center text-gray-400 text-sm">
@@ -325,7 +335,6 @@
           </div>
         </div>
       </footer>
-
     <script>
         // Translation data
         const translations = {
