--- a/shakespeare.html
+++ b/shakespeare.html
@@ -421,8 +421,8 @@
                     : 'Excellent! You are a true Shakespeare expert!';
             } else if (score === 1) {
                 feedback.textContent = document.querySelector('.tr-lang') 
-                    ? 'Fena değil! Biraz daha çalışırsanız Bard'ın tüm sırlarını çözeceksiniz!' 
-                    : 'Not bad! With a little more study, you'll uncover all of the Bard's secrets!';
+                    ? 'Fena değil! Biraz daha çalışırsanız Bardın tüm sırlarını çözeceksiniz!'
+                    : 'Not bad! With a little more study, you will uncover all of the Bard secrets!';
             } else {
                 feedback.textContent = document.querySelector('.tr-lang') 
                     ? 'Shakespeare hakkında daha fazla okumalısınız. Hikayeyi tekrar dinleyin!' 
