--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@
                 <button class="category-chip bg-red-100 text-red-800 px-4 py-2 rounded-full hover:bg-red-200">
                     <span data-tr="technology">Teknoloji</span>
                 </button>
+                <button class="category-chip bg-red-100 text-red-800 px-4 py-2 rounded-full hover:bg-red-200">
+                    <span data-tr="technology">Müzik</span>
+                </button>
+                <button class="category-chip bg-red-100 text-red-800 px-4 py-2 rounded-full hover:bg-red-200">
+                    <span data-tr="technology">Sanat</span>
+                </button>
+                <button class="category-chip bg-red-100 text-red-800 px-4 py-2 rounded-full hover:bg-red-200">
+                    <span data-tr="technology">Yabancı Diller</span>
+                </button>
             </div>
         </section>
 
@@ -222,7 +231,7 @@
         <!-- New Stories -->
         <section class="mb-12">
             <div class="flex justify-between items-center mb-6">
-                <h3 class="text-xl font-semibold text-gray-700" data-tr="featured_stories">Yeni Hikayeler</h3>
+                <h3 class="text-xl font-semibold text-gray-700" data-tr="new_stories">Yeni Hikayeler</h3>
                 <button class="text-purple-600 hover:text-purple-800 font-medium">
                     <span data-tr="see_all">Tümünü Gör</span> <i class="fas fa-chevron-right ml-1"></i>
                 </button>
