--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
                     <span data-tr="technology">Teknoloji</span>
                 </button>
                 <button class="category-chip bg-red-100 text-red-800 px-4 py-2 rounded-full hover:bg-red-200">
-                    <span data-tr="technology">Müzik</span>
+                    <span data-tr="music">Müzik</span>
                 </button>
                 <button class="category-chip bg-red-100 text-red-800 px-4 py-2 rounded-full hover:bg-red-200">
-                    <span data-tr="technology">Sanat</span>
+                    <span data-tr="art">Sanat</span>
                 </button>
                 <button class="category-chip bg-red-100 text-red-800 px-4 py-2 rounded-full hover:bg-red-200">
-                    <span data-tr="technology">Yabancı Diller</span>
+                    <span data-tr="foreign_languages>Yabancı Diller</span>
                 </button>
             </div>
         </section>
