--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
         </section>
 
-        
+
         <!-- Featured Stories -->
         <section class="mb-12">
             <div class="flex justify-between items-center mb-6">
@@ -510,6 +510,8 @@
                 literature: "Edebiyat",
                 math: "Matematik",
                 technology: "Teknoloji",
+                music: "Müzik",
+                art: "Sanat",
                 featured_stories: "Öne Çıkan Hikayeler",
                 see_all: "Tümünü Gör",
                 quantum_adventure: "Kuantum Macerası",
@@ -550,6 +552,8 @@
                 literature: "Literature",
                 math: "Math",
                 technology: "Technology",
+                music: "Music",
+                art: "Art",
                 featured_stories: "Featured Stories",
                 see_all: "See All",
                 quantum_adventure: "The Quantum Adventure",
