--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="AI ile otomatik eğitici hikayeler oluşturun">
-    <meta name="keywords" content="edtech, hikaye, AI, eğitim">
-    <title>Edu Story AI - Eğitici Hikayeler</title>
+    <meta name="keywords" content="edtech, hikaye, AI, eğitim, education, story,">
+    <title>Edustory AI - Eğitimciler için Yapay Zeka Hikaye Üretici</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -554,6 +554,60 @@
                 technology: "Technology",
                 music: "Music",
                 art: "Art",
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                
                 featured_stories: "Featured Stories",
                 see_all: "See All",
                 quantum_adventure: "The Quantum Adventure",
